package PizzaStoreV2.pizzas.ny;

import PizzaStoreV2.pizzas.Pizza;

public class NYStyleClamPizza extends Pizza {
    public NYStyleClamPizza() {
        name = "NY Style Clam Pizza";
        dough = "Thin Crust Dough";
        sauce = "Marinara Sauce";

        toppings.add("Fresh Clams from Long Island Sound");
    }
}
