' Generated by UML Generator
' Encoded: dLHTQy8m57tlhmZueaXbpxA9ubu6GuIEWOmznFJI1jkc9BTkwlplIrkr7qc6xCsSSy_nDEUsSuLKOf4cdjhnBAUIfeGbLAa5ekJR0k65YIpWHo0FNin388nBbe3dLLDa6ND68n7W8O5b3A1WpOz7IauU8MC7EHoL92jmE9gIlU2XTxRPlKCKSPTTYxpJRWrv3b9atE7OvUyqNIOqTJtmbR9QqQr2IHdMbqqQZq56KvYIGDz-5fNdK1HHt0OKBLXd0aMUwvzgIbwvmiUQc94dai4NMKX93nK-guBuVfacbw2xXbiY3MtfhdDk1ovfyTq-He0h7RI4Ba5kzxFQsBV1n7MWlieetSGjgbuDVTIYi6s3bMfhA-0D53vBleTQTD8l479s9YdbsP3AieRwHZu-ZTLPRIgB08MivGCcWUBbkV2GtthLqWfqxKfZCHOo1Fc7mvt_qbdk_yHqVGfy_sTscNAztewHNacEgQRyre1b2KtM4S5OAfDp9-jKtE3LkKjE9bUD5JIRwBkP4urw3bcel-g_
' URL: http://www.plantuml.com/plantuml/uml/dLHTQy8m57tlhmZueaXbpxA9ubu6GuIEWOmznFJI1jkc9BTkwlplIrkr7qc6xCsSSy_nDEUsSuLKOf4cdjhnBAUIfeGbLAa5ekJR0k65YIpWHo0FNin388nBbe3dLLDa6ND68n7W8O5b3A1WpOz7IauU8MC7EHoL92jmE9gIlU2XTxRPlKCKSPTTYxpJRWrv3b9atE7OvUyqNIOqTJtmbR9QqQr2IHdMbqqQZq56KvYIGDz-5fNdK1HHt0OKBLXd0aMUwvzgIbwvmiUQc94dai4NMKX93nK-guBuVfacbw2xXbiY3MtfhdDk1ovfyTq-He0h7RI4Ba5kzxFQsBV1n7MWlieetSGjgbuDVTIYi6s3bMfhA-0D53vBleTQTD8l479s9YdbsP3AieRwHZu-ZTLPRIgB08MivGCcWUBbkV2GtthLqWfqxKfZCHOo1Fc7mvt_qbdk_yHqVGfy_sTscNAztewHNacEgQRyre1b2KtM4S5OAfDp9-jKtE3LkKjE9bUD5JIRwBkP4urw3bcel-g_
' Generated on: 2025-12-07T20:25:50.423119

@startuml
skinparam classAttributeIconSize 0
hide circle

class ChicagoStyleCheesePizza {
  +ChicagoStyleCheesePizza()
  +cut(): void
}

class ChicagoStyleVeggiePizza {
  +ChicagoStyleVeggiePizza()
  +cut(): void
}

class ChicagoStylePepperoniPizza {
  +ChicagoStylePepperoniPizza()
  +cut(): void
}

class ChicagoStyleClamPizza {
  +ChicagoStyleClamPizza()
  +cut(): void
}

abstract class Pizza {
  #name: String
  #dough: String
  #sauce: String
  #toppings: List<String> = new ArrayList<>()
  --
  +prepare(): void
  +bake(): void
  +cut(): void
  +box(): void
  +getName(): String
}

class NYStyleCheesePizza {
  +NYStyleCheesePizza()
}

class NYStyleVeggiePizza {
  +NYStyleVeggiePizza()
}

class NYStyleClamPizza {
  +NYStyleClamPizza()
}

class NYStylePepperoniPizza {
  +NYStylePepperoniPizza()
}

class PizzaTestDrive {
  +{static} main(args: String[]): void
}

class NYPizzaStore {
  #createPizza(type: String): Pizza
}

abstract class PizzaStore {
  +orderPizza(type: String): Pizza
  #createPizza(type: String): Pizza
}

class ChicagoPizzaStore {
  #createPizza(type: String): Pizza
}

ChicagoStyleCheesePizza --|> Pizza
ChicagoStyleVeggiePizza --|> Pizza
ChicagoStylePepperoniPizza --|> Pizza
ChicagoStyleClamPizza --|> Pizza
NYStyleCheesePizza --|> Pizza
NYStyleVeggiePizza --|> Pizza
NYStyleClamPizza --|> Pizza
NYStylePepperoniPizza --|> Pizza
NYPizzaStore --|> PizzaStore
NYPizzaStore ..> Pizza
PizzaStore ..> Pizza
ChicagoPizzaStore --|> PizzaStore
ChicagoPizzaStore ..> Pizza
@enduml